# jwt-redis-actix-example

./: Cargo.toml  README.md
src/: main.rs
src/models/: user.rs
src/routes/: auth.rs  mod.rs
src/utils/: jwt.rs  mod.rs  redis.rs
