[package]
name = "jwt-redis-actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.1"
jsonwebtoken = "9.3"
chrono = "0.4"
redis = { version = "0.27.5", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.7.0"